--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 <script>
     // ==================== إعدادات JSONBin.io ====================
     const BIN_ID = '69970e66d0ea881f40c6e5f1';   // Bin ID الخاص بك
-    const API_KEY = '$2a$10$Vr.IXqFqQhVonWFc6/ui3uMLaDIhhXi7P1EbpoY95.Gflp22/PMwG';   // مفتاح API
+    const API_KEY = '$2a$10$bhl.pcmrJWpGboU.dqR5vur.I4Fq9le/uflXUcdof7xF/3sSAu4/O';   // مفتاح API
 
     // ==================== المتغيرات العامة ====================
     let waste = [];                      // سيتم ملؤها من السحابة أو localStorage
