--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نظام إدارة الفضل - الجبر ستيل (نسخة سحابية + احتياطي محلي)</title>
+    <title>نظام إدارة الفضل - الجبر ستيل (نسخة بأرقام القطع)</title>
     <style>
-        /* نفس التنسيقات مع إضافة لون للتحذير */
+        /* نفس التنسيقات مع إضافة عمود الرقم */
         * {
             box-sizing: border-box;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -273,7 +273,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>🏭 نظام إدارة الفضل المتطور - الجبر ستيل (نسخة سحابية + احتياطي محلي)</h2>
+    <h2>🏭 نظام إدارة الفضل المتطور - الجبر ستيل (بأرقام القطع)</h2>
 
     <!-- رسائل تنبيه -->
     <div id="alertBox" class="alert"></div>
@@ -326,8 +326,14 @@
     <div class="form-section">
         <div class="form-group">
             <label>اختر النوع</label>
-            <select id="cutTypeSelect">
+            <select id="cutTypeSelect" onchange="updateCutIdOptions()">
                 <option value="">-- اختر نوع --</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>اختر رقم القطعة</label>
+            <select id="cutIdSelect">
+                <option value="">-- اختر رقم --</option>
             </select>
         </div>
         <div class="form-group">
@@ -345,6 +351,7 @@
     <table id="wasteTable">
         <thead>
             <tr>
+                <th onclick="sortTable('id')">الرقم 🔽</th>
                 <th onclick="sortTable('type')">النوع 🔽</th>
                 <th onclick="sortTable('length')">الطول (سم) 🔽</th>
                 <th>إجراءات</th>
@@ -377,6 +384,7 @@
 <div id="importModal" class="modal hidden">
     <div class="modal-content">
         <h3>📥 استيراد بيانات JSON</h3>
+        <p>ملاحظة: سيتم إعادة ترقيم القطع تلقائياً لضمان عدم تكرار الأرقام.</p>
         <textarea id="importText" rows="10" placeholder='[{"type":"علبة 1×1","length":120}, ...]' style="width:100%; padding:8px;"></textarea>
         <div class="modal-actions">
             <button onclick="confirmImport()">استيراد</button>
@@ -388,21 +396,23 @@
 <script>
     // ==================== إعدادات JSONBin.io ====================
     const BIN_ID = '69970e66d0ea881f40c6e5f1';   // Bin ID الخاص بك
-    const API_KEY = '$2a$10$Vr.IXqFqQhVonWFc6/ui3uMLaDIhhXi7P1EbpoY95.Gflp22/PMwG';   // مفتاح API
+    const API_KEY = '$2a$10$bhl.pcmrJWpGboU.dqR5vur.I4Fq9le/uflXUcdof7xF/3sSAu4/O';   // مفتاح API
 
     // ==================== المتغيرات العامة ====================
-    let waste = [];                      // سيتم ملؤها من السحابة أو localStorage
-    let currentSort = { field: null, order: 'asc' };
+    let waste = [];                      // مصفوفة العناصر { id, type, length }
+    let currentSort = { field: 'id', order: 'asc' };  // ترتيب افتراضي حسب الرقم
     let searchQuery = '';
     let filterType = '';
     let sortLengthDir = 'none';
-    let editIndex = null;
+    let editIndex = null;                // index في مصفوفة waste للقطعة المراد تعديلها
 
     // عناصر DOM
     const alertBox = document.getElementById('alertBox');
     const summaryDiv = document.getElementById('summary');
     const wasteTableBody = document.getElementById('wasteTableBody');
     const cutTypeSelect = document.getElementById('cutTypeSelect');
+    const cutIdSelect = document.getElementById('cutIdSelect');
+    const cutLength = document.getElementById('cutLength');
     const filterTypeSelect = document.getElementById('filterType');
     const searchInput = document.getElementById('searchInput');
     const sortLengthSelect = document.getElementById('sortLength');
@@ -411,9 +421,6 @@
     const editLength = document.getElementById('editLength');
     const importModal = document.getElementById('importModal');
     const importText = document.getElementById('importText');
-
-    // مؤشر تحميل بسيط
-    let isLoading = false;
 
     // ==================== دوال مساعدة ====================
     function showAlert(message, type = 'success') {
@@ -425,29 +432,38 @@
         }, 3000);
     }
 
-    function setLoading(loading) {
-        isLoading = loading;
-        document.querySelectorAll('button').forEach(btn => btn.disabled = loading);
+    // حساب max id الحالي للمساعدة في توليد أرقام جديدة
+    function getMaxId() {
+        if (waste.length === 0) return 0;
+        return Math.max(...waste.map(item => item.id));
+    }
+
+    // توليد id جديد (أكبر id موجود + 1)
+    function generateNewId() {
+        return getMaxId() + 1;
     }
 
     // ==================== دوال JSONBin.io مع نسخ احتياطي محلي ====================
     async function loadWaste() {
-        setLoading(true);
-        let loadedFromCloud = false;
+        // محاولة التحميل من السحابة
         try {
             const response = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`, {
                 headers: { 'X-Master-Key': API_KEY }
             });
             if (!response.ok) throw new Error('فشل التحميل من السحابة');
             const data = await response.json();
-            waste = data.record || [];
-            // تحديث النسخة الاحتياطية في localStorage
+            let loadedData = data.record || [];
+            // التحقق من أن البيانات تحتوي على id، إذا لم يكن موجوداً (بيانات قديمة) نقوم بإضافة id
+            if (loadedData.length > 0 && !loadedData[0].hasOwnProperty('id')) {
+                // إعادة بناء البيانات مع إضافة id تسلسلي
+                loadedData = loadedData.map((item, index) => ({ id: index + 1, type: item.type, length: item.length }));
+                showAlert('تمت ترقية البيانات القديمة وإضافة أرقام للقطع', 'warning');
+            }
+            waste = loadedData;
             localStorage.setItem('waste_backup', JSON.stringify(waste));
-            loadedFromCloud = true;
             showAlert('تم تحميل البيانات من السحابة', 'success');
         } catch (error) {
             console.warn('تعذر الاتصال بالسحابة، جلب البيانات من النسخة المحلية...', error);
-            // محاولة القراءة من localStorage
             const localData = localStorage.getItem('waste_backup');
             if (localData) {
                 waste = JSON.parse(localData);
@@ -456,14 +472,11 @@
                 waste = [];
                 showAlert('لا توجد بيانات محفوظة محلياً، ابدأ بإضافة قطع جديدة', 'error');
             }
-        } finally {
-            setLoading(false);
-            renderWaste();
         }
+        renderWaste();
     }
 
     async function saveWaste() {
-        setLoading(true);
         try {
             const response = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}`, {
                 method: 'PUT',
@@ -474,22 +487,20 @@
                 body: JSON.stringify(waste)
             });
             if (!response.ok) throw new Error('فشل الحفظ في السحابة');
-            // تحديث النسخة الاحتياطية بعد الحفظ الناجح
             localStorage.setItem('waste_backup', JSON.stringify(waste));
             showAlert('تم حفظ البيانات في السحابة', 'success');
         } catch (error) {
             console.error('خطأ في حفظ البيانات في السحابة:', error);
-            // على الأقل نحفظ محلياً
             localStorage.setItem('waste_backup', JSON.stringify(waste));
             showAlert('تعذر الحفظ في السحابة، تم الحفظ محلياً فقط', 'warning');
-        } finally {
-            setLoading(false);
         }
     }
 
     // ==================== دوال العرض والفلترة ====================
     function updateTypeSelects() {
         const types = [...new Set(waste.map(item => item.type))];
+        // قائمة القص
+        const currentCutType = cutTypeSelect.value;
         cutTypeSelect.innerHTML = '<option value="">-- اختر نوع --</option>';
         types.forEach(type => {
             const option = document.createElement('option');
@@ -497,7 +508,10 @@
             option.textContent = type;
             cutTypeSelect.appendChild(option);
         });
-
+        if (currentCutType && types.includes(currentCutType)) {
+            cutTypeSelect.value = currentCutType;
+        }
+        // قائمة التصفية
         const currentFilterVal = filterTypeSelect.value;
         filterTypeSelect.innerHTML = '<option value="">الكل</option>';
         types.forEach(type => {
@@ -506,6 +520,24 @@
             option.textContent = type;
             if (type === currentFilterVal) option.selected = true;
             filterTypeSelect.appendChild(option);
+        });
+
+        // تحديث خيارات الأرقام في القص
+        updateCutIdOptions();
+    }
+
+    function updateCutIdOptions() {
+        const selectedType = cutTypeSelect.value;
+        cutIdSelect.innerHTML = '<option value="">-- اختر رقم --</option>';
+        if (!selectedType) return;
+
+        const pieces = waste.filter(item => item.type === selectedType);
+        pieces.sort((a, b) => a.id - b.id); // ترتيب تصاعدي حسب الرقم
+        pieces.forEach(piece => {
+            const option = document.createElement('option');
+            option.value = piece.id;
+            option.textContent = `رقم ${piece.id} (${piece.length} سم)`;
+            cutIdSelect.appendChild(option);
         });
     }
 
@@ -520,8 +552,9 @@
             filtered = filtered.filter(item => item.type.toLowerCase().includes(query));
         }
 
-        // تطبيق الترتيب حسب الطول (إن وجد)
+        // تطبيق الترتيب
         if (sortLengthDir !== 'none') {
+            // ترتيب خاص حسب الطول يلغي الترتيب العام
             filtered.sort((a, b) => sortLengthDir === 'asc' ? a.length - b.length : b.length - a.length);
         } else if (currentSort.field) {
             filtered.sort((a, b) => {
@@ -535,25 +568,23 @@
             });
         }
 
-        // إضافة original index
-        let filteredWithIndices = filtered.map(item => {
-            const originalIndex = waste.findIndex(w => w.type === item.type && w.length === item.length);
-            return { item, originalIndex };
-        });
-
-        if (filteredWithIndices.length === 0) {
-            wasteTableBody.innerHTML = '<tr><td colspan="3" style="text-align:center; color:#999;">لا توجد قطع مطابقة</td></tr>';
+        if (filtered.length === 0) {
+            wasteTableBody.innerHTML = '<tr><td colspan="4" style="text-align:center; color:#999;">لا توجد قطع مطابقة</td></tr>';
         } else {
-            wasteTableBody.innerHTML = filteredWithIndices.map(({ item, originalIndex }) => `
-                <tr>
-                    <td>${item.type}</td>
-                    <td>${item.length}</td>
-                    <td>
-                        <button class="action-btn edit-btn" onclick="openEditModal(${originalIndex})" title="تعديل">✏️</button>
-                        <button class="action-btn" onclick="deleteWaste(${originalIndex})" title="حذف">🗑️</button>
-                    </td>
-                </tr>
-            `).join('');
+            wasteTableBody.innerHTML = filtered.map(item => {
+                // نمرر id للمعرفات
+                return `
+                    <tr>
+                        <td>${item.id}</td>
+                        <td>${item.type}</td>
+                        <td>${item.length}</td>
+                        <td>
+                            <button class="action-btn edit-btn" onclick="openEditModal(${item.id})" title="تعديل">✏️</button>
+                            <button class="action-btn" onclick="deleteWaste(${item.id})" title="حذف">🗑️</button>
+                        </td>
+                    </tr>
+                `;
+            }).join('');
         }
 
         updateTypeSelects();
@@ -590,7 +621,7 @@
         filterType = '';
         searchQuery = '';
         sortLengthDir = 'none';
-        currentSort = { field: null, order: 'asc' };
+        currentSort = { field: 'id', order: 'asc' }; // إعادة الترتيب الافتراضي
         renderWaste();
     }
 
@@ -614,26 +645,32 @@
         if (!type) { showAlert('الرجاء إدخال النوع', 'error'); return; }
         if (isNaN(length) || length <= 0) { showAlert('الرجاء إدخال طول صحيح', 'error'); return; }
 
-        waste.push({ type, length });
-        await saveWaste();   // حفظ في السحابة (أو محلياً)
+        const newId = generateNewId();
+        waste.push({ id: newId, type, length });
+        await saveWaste();
         renderWaste();
         showAlert('تم إضافة الفضلة بنجاح', 'success');
         document.getElementById('newType').value = '';
         document.getElementById('newLength').value = '';
     }
 
-    // حذف قطعة
-    window.deleteWaste = async function(index) {
+    // حذف قطعة (باستخدام id)
+    window.deleteWaste = async function(id) {
         if (confirm('هل أنت متأكد من حذف هذه القطعة؟')) {
-            waste.splice(index, 1);
-            await saveWaste();
-            renderWaste();
-            showAlert('تم الحذف', 'success');
+            const index = waste.findIndex(item => item.id === id);
+            if (index !== -1) {
+                waste.splice(index, 1);
+                await saveWaste();
+                renderWaste();
+                showAlert('تم الحذف', 'success');
+            }
         }
     };
 
-    // تعديل
-    window.openEditModal = function(index) {
+    // فتح مودال التعديل باستخدام id
+    window.openEditModal = function(id) {
+        const index = waste.findIndex(item => item.id === id);
+        if (index === -1) return;
         editIndex = index;
         const item = waste[index];
         editType.value = item.type;
@@ -653,34 +690,37 @@
         if (!newType) { showAlert('النوع لا يمكن أن يكون فارغاً', 'error'); return; }
         if (isNaN(newLength) || newLength <= 0) { showAlert('الطول يجب أن يكون رقماً صحيحاً موجباً', 'error'); return; }
 
-        waste[editIndex] = { type: newType, length: newLength };
+        // لا نغير id
+        waste[editIndex] = { ...waste[editIndex], type: newType, length: newLength };
         await saveWaste();
         renderWaste();
         closeEditModal();
         showAlert('تم التعديل بنجاح', 'success');
     };
 
-    // قص
+    // قص باستخدام الرقم المختار
     async function cutMaterial() {
         const type = cutTypeSelect.value;
-        const required = parseInt(document.getElementById('cutLength').value);
+        const selectedId = parseInt(cutIdSelect.value);
+        const required = parseInt(cutLength.value);
 
         if (!type) { showAlert('الرجاء اختيار النوع', 'error'); return; }
+        if (!selectedId) { showAlert('الرجاء اختيار رقم القطعة', 'error'); return; }
         if (isNaN(required) || required <= 0) { showAlert('الرجاء إدخال طول صحيح', 'error'); return; }
 
-        const suitable = waste
-            .map((piece, idx) => ({ piece, idx }))
-            .filter(p => p.piece.type === type && p.piece.length >= required);
-
-        if (suitable.length === 0) {
-            showAlert(`لا توجد قطعة من نوع "${type}" بطول كافٍ (${required} سم)`, 'error');
+        // البحث عن القطعة بالرقم
+        const pieceIndex = waste.findIndex(item => item.id === selectedId && item.type === type);
+        if (pieceIndex === -1) {
+            showAlert('القطعة المحددة غير موجودة', 'error');
             return;
         }
 
-        const best = suitable.reduce((min, p) => p.piece.length < min.piece.length ? p : min);
-        const pieceIndex = best.idx;
-        const newLength = waste[pieceIndex].length - required;
+        if (waste[pieceIndex].length < required) {
+            showAlert(`القطعة رقم ${selectedId} طولها ${waste[pieceIndex].length} سم فقط ولا تكفي للطول المطلوب`, 'error');
+            return;
+        }
 
+        const newLength = waste[pieceIndex].length - required;
         if (newLength === 0) {
             waste.splice(pieceIndex, 1);
             showAlert(`تم القص واستهلاك القطعة بالكامل`, 'success');
@@ -691,7 +731,9 @@
 
         await saveWaste();
         renderWaste();
-        document.getElementById('cutLength').value = '';
+        cutLength.value = '';
+        // إعادة تعيين اختيار الرقم
+        cutIdSelect.value = '';
     }
 
     // مسح الكل
@@ -716,7 +758,7 @@
         URL.revokeObjectURL(url);
     };
 
-    // استيراد JSON
+    // استيراد JSON مع إعادة ترقيم القطع لضمان عدم التكرار
     window.importData = function() {
         importModal.classList.remove('hidden');
         importText.value = '';
@@ -730,22 +772,27 @@
         try {
             const newData = JSON.parse(importText.value);
             if (!Array.isArray(newData)) throw new Error('البيانات ليست مصفوفة');
-            newData.forEach(item => {
+            
+            // تحويل البيانات إلى الشكل الجديد مع إضافة id تسلسلي
+            const importedWaste = [];
+            newData.forEach((item, index) => {
                 if (typeof item.type !== 'string' || typeof item.length !== 'number' || item.length <= 0) {
                     throw new Error('بيانات غير صالحة');
                 }
+                importedWaste.push({ id: index + 1, type: item.type, length: item.length });
             });
-            waste = newData;
+
+            waste = importedWaste;
             await saveWaste();
             renderWaste();
             closeImportModal();
-            showAlert('تم الاستيراد بنجاح', 'success');
+            showAlert('تم الاستيراد بنجاح مع إعادة الترقيم', 'success');
         } catch (e) {
             showAlert('خطأ في قراءة الملف: ' + e.message, 'error');
         }
     };
 
-    // datalist
+    // datalist للأنواع
     const datalist = document.createElement('datalist');
     datalist.id = 'typeOptions';
     document.body.appendChild(datalist);
@@ -753,6 +800,7 @@
         const types = [...new Set(waste.map(item => item.type))];
         datalist.innerHTML = types.map(t => `<option value="${t}">`).join('');
     }
+
     // ربط updateDatalist مع renderWaste
     const originalRender = renderWaste;
     renderWaste = function() {
@@ -771,4 +819,3 @@
 </script>
 </body>
 </html>
-
