--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام إدارة الفضل - الجبر ستيل (نسخة بأرقام القطع)</title>
     <style>
-        /* نفس التنسيقات مع إضافة عمود الرقم */
+        /* نفس التنسيقات السابقة مع إضافة عمود الرقم */
         * {
             box-sizing: border-box;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -396,7 +396,7 @@
 <script>
     // ==================== إعدادات JSONBin.io ====================
     const BIN_ID = '69970e66d0ea881f40c6e5f1';   // Bin ID الخاص بك
-    const API_KEY = '$2a$10$bhl.pcmrJWpGboU.dqR5vur.I4Fq9le/uflXUcdof7xF/3sSAu4/O';   // مفتاح API
+    const API_KEY = '$2a$10$bhl.pcmrJWpGboU.dqR5vur.I4Fq9le/uflXUcdof7xF/3sSAu4/O';   // ضع مفتاح API هنا
 
     // ==================== المتغيرات العامة ====================
     let waste = [];                      // مصفوفة العناصر { id, type, length }
@@ -443,9 +443,27 @@
         return getMaxId() + 1;
     }
 
+    // التأكد من أن جميع القطع لها id (للبيانات القديمة)
+    function ensureAllHaveIds(data) {
+        if (!Array.isArray(data)) return [];
+        let maxId = 0;
+        const newData = [];
+        for (let item of data) {
+            if (item.id !== undefined && !isNaN(item.id)) {
+                // إذا كان id موجوداً، نستخدمه ونتأكد من أنه رقم
+                newData.push({ id: Number(item.id), type: item.type, length: item.length });
+                if (item.id > maxId) maxId = item.id;
+            } else {
+                // إذا لم يكن id موجوداً، نعطيه id جديد
+                maxId++;
+                newData.push({ id: maxId, type: item.type, length: item.length });
+            }
+        }
+        return newData;
+    }
+
     // ==================== دوال JSONBin.io مع نسخ احتياطي محلي ====================
     async function loadWaste() {
-        // محاولة التحميل من السحابة
         try {
             const response = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`, {
                 headers: { 'X-Master-Key': API_KEY }
@@ -453,20 +471,16 @@
             if (!response.ok) throw new Error('فشل التحميل من السحابة');
             const data = await response.json();
             let loadedData = data.record || [];
-            // التحقق من أن البيانات تحتوي على id، إذا لم يكن موجوداً (بيانات قديمة) نقوم بإضافة id
-            if (loadedData.length > 0 && !loadedData[0].hasOwnProperty('id')) {
-                // إعادة بناء البيانات مع إضافة id تسلسلي
-                loadedData = loadedData.map((item, index) => ({ id: index + 1, type: item.type, length: item.length }));
-                showAlert('تمت ترقية البيانات القديمة وإضافة أرقام للقطع', 'warning');
-            }
-            waste = loadedData;
+            // التأكد من أن كل قطعة لها id
+            waste = ensureAllHaveIds(loadedData);
             localStorage.setItem('waste_backup', JSON.stringify(waste));
             showAlert('تم تحميل البيانات من السحابة', 'success');
         } catch (error) {
             console.warn('تعذر الاتصال بالسحابة، جلب البيانات من النسخة المحلية...', error);
             const localData = localStorage.getItem('waste_backup');
             if (localData) {
-                waste = JSON.parse(localData);
+                let parsed = JSON.parse(localData);
+                waste = ensureAllHaveIds(parsed);
                 showAlert('تم تحميل البيانات من النسخة المحلية (قد تكون غير محدثة)', 'warning');
             } else {
                 waste = [];
@@ -572,7 +586,6 @@
             wasteTableBody.innerHTML = '<tr><td colspan="4" style="text-align:center; color:#999;">لا توجد قطع مطابقة</td></tr>';
         } else {
             wasteTableBody.innerHTML = filtered.map(item => {
-                // نمرر id للمعرفات
                 return `
                     <tr>
                         <td>${item.id}</td>
@@ -621,7 +634,7 @@
         filterType = '';
         searchQuery = '';
         sortLengthDir = 'none';
-        currentSort = { field: 'id', order: 'asc' }; // إعادة الترتيب الافتراضي
+        currentSort = { field: 'id', order: 'asc' };
         renderWaste();
     }
 
@@ -772,14 +785,13 @@
         try {
             const newData = JSON.parse(importText.value);
             if (!Array.isArray(newData)) throw new Error('البيانات ليست مصفوفة');
-            
-            // تحويل البيانات إلى الشكل الجديد مع إضافة id تسلسلي
-            const importedWaste = [];
-            newData.forEach((item, index) => {
+
+            // إعادة ترقيم القطع من 1 إلى ...
+            const importedWaste = newData.map((item, index) => {
                 if (typeof item.type !== 'string' || typeof item.length !== 'number' || item.length <= 0) {
                     throw new Error('بيانات غير صالحة');
                 }
-                importedWaste.push({ id: index + 1, type: item.type, length: item.length });
+                return { id: index + 1, type: item.type, length: item.length };
             });
 
             waste = importedWaste;
